--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,11 +79,12 @@ footer div {
   background: #5d5d5d;
   width: 500px;
   border-style: solid;
-  border: width; 3px;
+  border: width 3px;
   border-color: #024e76;
   position: absolute;
   top: 50%;
   right: 900px;
+  
 }
 
 .ledwall {
@@ -91,7 +92,7 @@ footer div {
   background: #5d5d5d;
   width: 500px;
   border-style: solid;
-  border: width; 3px;
+  border: width 3px;
   border-color: #024e76;
   position: absolute;
   top: 50%;
@@ -103,10 +104,21 @@ footer div {
   background: #5d5d5d;
   width: 500px;
   border-style: solid;
-  border: width; 3px;
+  border: width 3px;
   border-color: #024e76;
   position: absolute;
   top: 80%;
   left: 900px;
+}
 
+.hero-cta {
+  padding: 20px;
+  background: #5d5d5d;
+  width: 500px;
+  border-style: solid;
+  border: width 3px;
+  border-color: #024e76;
+  position: absolute;
+  top: 10%;
+  left: 1000px;
 }
