--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,61 +8,49 @@
   width: 100%;
   background-color: #555;
   overflow: auto;
-  
 }
-.navbrand {
-  padding: 60px;
-}
-.ledwall {
-  position: absolute;
-  text-align: center;
-  color: black;
-}
+ /*Start of the jumbotron */
 
 .jumbotron {
-  color: black;
   background-position: left;
   background-repeat: no-repeat;
   background-size: cover;
   padding-left: 40px;
   height: 150px;
-background-color:blue;
+  background-color: khaki;
 }
-
-.aboutme {
-  background-position:left;
-  text-align: left; 
-  padding-left: 10px;
-  padding-block: 10px 29px 10px;
-}
-.v1 {
-  position: absolute;
-  border-left: 6px solid grey;
-  height: 300px;
-  left: 30%;
-  margin-left: -3px;
-  top: 205px;
-}
-
-.row {
-  display: flex;
-}
-
-.column {
-  flex: 33.33%;
-  padding: 5px;
+.sidenav {
+  height: 100%; /* Full-height: remove this if you want "auto" height */
+  width: 160px; /* Set the width of the sidebar */
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1; /* Stay on top */
+  top: 200; /* Stay at the top */
+  left: 0;
+  background-color: black; /* Black */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 20px;
 }
 
 
-  footer {
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+/* Style page content */
+.main {
+  margin-left: 160px; /* Same as the width of the sidebar */
+  padding: 0px 10px;
+}
+
+/*This column aligns the images from left to right*/
+
+  .footer {
     background-color: #555;
     color: white;
     padding: 15px;
   }
-   /* On small screens, set height to 'auto' for sidenav and grid */
-   @media screen and (max-width: 767px) {
-    .sidenav {
-      height: auto;
-      padding: 15px;
-    }
-   
+
+
+ 
