--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 .navbar {
   margin-bottom: 0;
   border-radius: 0;
+  text-decoration: none;
 }
 
 /* Style the navigation bar */
@@ -9,6 +10,8 @@
   background-color: #555;
   overflow: auto;
 }
+
+
  /*Start of the jumbotron */
 
 .jumbotron {
@@ -17,39 +20,38 @@
   background-size: cover;
   padding-left: 40px;
   height: 150px;
-  background-color: khaki;
-}
-.sidenav {
-  height: 100%; /* Full-height: remove this if you want "auto" height */
-  width: 160px; /* Set the width of the sidebar */
-  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  z-index: 1; /* Stay on top */
-  top: 200; /* Stay at the top */
-  left: 0;
-  background-color: black; /* Black */
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
+  color: white;
+  background: repeating-linear-gradient(
+    45deg,
+    #606dbc,
+    #606dbc 10px,
+    #465298 10px,
+    #465298 20px
+  );
 }
 
+/*vertical line
+border-top-right-radius: 6px solid green;
+height: 500px;}*/
 
-
-/* When you mouse over the navigation links, change their color */
-.sidenav a:hover {
-  color: #f1f1f1;
+.bg-info {
+  color: white;
+  background: repeating-linear-gradient(
+    45deg,
+    #606dbc,
+    #606dbc 10px,
+    #465298 10px,
+    #465298 20px
+  );
 }
 
-/* Style page content */
-.main {
-  margin-left: 160px; /* Same as the width of the sidebar */
-  padding: 0px 10px;
 }
 
 /*This column aligns the images from left to right*/
 
   .footer {
-    background-color: #555;
-    color: white;
-    padding: 15px;
+    color:grey;
+    padding: 155px;
   }
 
 
